After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667719 - waveformsink: Fix mingw warnings
waveformsink: Fix mingw warnings
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Windows
: Normal minor
: 0.10.32
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-11 22:16 UTC by Raimo Järvi
Modified: 2012-01-13 09:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix warnings (2.75 KB, patch)
2012-01-11 22:23 UTC, Raimo Järvi
committed Details | Review

Description Raimo Järvi 2012-01-11 22:16:02 UTC
Warnings on 64 bit mingw-w64:

In file included from gstwaveformsink.c:48:0:
gstwaveformsink.h:31:0: error: "WAVE_FORMAT_96M08" redefined
/usr/x86_64-w64-mingw32/sys-root/mingw/include/mmsystem.h:468:0: note: this is the location of the previous definition
gstwaveformsink.h:32:0: error: "WAVE_FORMAT_96S08" redefined
/usr/x86_64-w64-mingw32/sys-root/mingw/include/mmsystem.h:469:0: note: this is the location of the previous definition
gstwaveformsink.h:33:0: error: "WAVE_FORMAT_96M16" redefined
/usr/x86_64-w64-mingw32/sys-root/mingw/include/mmsystem.h:470:0: note: this is the location of the previous definition
gstwaveformsink.h:34:0: error: "WAVE_FORMAT_96S16" redefined
/usr/x86_64-w64-mingw32/sys-root/mingw/include/mmsystem.h:471:0: note: this is the location of the previous definition
gstwaveformsink.c: In function 'gst_waveform_sink_prepare':
gstwaveformsink.c:377:13: error: cast from pointer to integer of different size
gstwaveformsink.c:377:34: error: cast from pointer to integer of different size
gstwaveformsink.c: In function 'waveOutProc':
gstwaveformsink.c:574:29: error: cast to pointer from integer of different size
Comment 1 Raimo Järvi 2012-01-11 22:23:32 UTC
Created attachment 205048 [details] [review]
Fix warnings
Comment 2 Tim-Philipp Müller 2012-01-13 09:44:08 UTC
commit e886ef8f5bcd4dc10531c74a59b3288b7baf4b45
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Thu Jan 12 00:18:39 2012 +0200

    waveformsink: Fix mingw warnings
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667719