waveformsink: Fix mingw warnings

https://bugzilla.gnome.org/show_bug.cgi?id=667719