sys/waveform/gstwaveformsink.h
@@ -28,10 +28,21 @@
 #include <windows.h>
 #include <mmsystem.h>
 
+#ifndef WAVE_FORMAT_96M08
 #define WAVE_FORMAT_96M08       0x00001000       /* 96   kHz, Mono,   8-bit  */
+#endif
+
+#ifndef WAVE_FORMAT_96S08
 #define WAVE_FORMAT_96S08       0x00002000       /* 96   kHz, Stereo, 8-bit  */
+#endif
+
+#ifndef WAVE_FORMAT_96M16
 #define WAVE_FORMAT_96M16       0x00004000       /* 96   kHz, Mono,   16-bit */
+#endif
+
+#ifndef WAVE_FORMAT_96S16
 #define WAVE_FORMAT_96S16       0x00008000       /* 96   kHz, Stereo, 16-bit */
+#endif
 
 #define ERROR_LENGTH MAXERRORLENGTH+50
 #define BUFFER_COUNT 20
